--- a/main.html
+++ b/main.html
@@ -156,20 +156,35 @@ Funkcja aktywacji Softmax jest używana głównie w warstwie wyjściowej i jest 
             <hr>
             <p id="model2"><br></p>
             <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
-            <p id=""></p>
+   
         </div>
 </div>
+<!-- example -->
+<div class="container">
+    <div class="column">
+  <p>Przyklad</p>
+  <p>xor
+    <button type="submit" onclick="xor()">xor</button>    
+</p>
+    </div>
+    <div class="column">
 
+        <br>
+        Wynikiem wyjsciowym, jest rozmiar 4 
+        <p id="xor">
+           
+        </p>
+        <hr>
+        <p id="model2"><br></p>
+        <p id=""></p>
+
+    </div>
+</div>
+
+<!-- end -->
 </main>
 <script src="./js/01.js"></script>
 <script src="./js/02model.js"></script>
+<script src="./js/03xor.js"></script>
 </body>
 </html>
